--- a/D3Experiment/Views/Home/ImageViewer.cshtml
+++ b/D3Experiment/Views/Home/ImageViewer.cshtml
@@ -3,24 +3,88 @@
 }
 <link href="~/lib/viewerjs/viewer.css" rel="stylesheet">
 <script src="~/lib/viewerjs/viewer.js"></script>
-<script>
-    let viewer;
-    function previewFile() {
-        var preview = document.querySelector('img');
-        var file = document.querySelector('input[type=file]').files[0];
-        var reader = new FileReader();
-
-        reader.addEventListener("load", function () {
-            console.log(reader.result);
-            preview.src = reader.result;
-
-        }, false);
-
-        if (file) {
-            reader.readAsDataURL(file);
-        }
+<style>
+    body {
+        font-family: 'Segoe UI';
+        font-size: 12pt;
     }
 
+    header h1 {
+        font-size: 12pt;
+        color: #fff;
+        background-color: #1BA1E2;
+        padding: 20px;
+    }
+
+    article {
+        width: 80%;
+        margin: auto;
+        margin-top: 10px;
+    }
+
+
+    .thumbnail {
+        height: 100px;
+        margin: 10px;
+    }
+</style>
+<h1>ImageViewer</h1>
+
+<!-- Learn about this code on MDN: https://developer.mozilla.org/en-US/docs/Web/API/FileReader/readAsDataURL -->
+<div>
+    <input id="files" type="file"><br>
+    <ul id="results"></ul>
+</div>
+<div>
+
+    <img id="preview" src="" height="200" alt="Image preview...">
+</div>
+<div>
+    <button onclick="openViewer('results')">Open Viewer</button>
+    <button onclick="destroyViewer()">Close Viewer</button>
+    <button onclick="sendImage('preview')">Send Image</button>
+</div>
+<script>
+    if(window.File && window.FileList && window.FileReader)
+    {
+        var filesInput = document.getElementById("files");
+
+        filesInput.addEventListener("change", function(event){
+
+            var files = event.target.files; //FileList object
+            var output = document.getElementById("results");
+
+            for(var i = 0; i< files.length; i++)
+            {
+                var file = files[i];
+
+                //Only pics
+                if(!file.type.match('image'))
+                  continue;
+
+                var picReader = new FileReader();
+
+                picReader.addEventListener("load",function(event){
+                    var picFile = event.target;
+                    var liElement = document.createElement("li");
+                    liElement.innerHTML = "<img class='thumbnail' src='" + picFile.result + "'" +
+                            "title='" + picFile.name + "'/>";
+                    output.insertBefore(liElement,null);
+                });
+
+                 //Read the image
+                picReader.readAsDataURL(file);
+            }
+
+        });
+    }
+    else
+    {
+        console.log("Your browser does not support File API");
+    }
+
+
+    let viewer;
     let openViewer = function (elementId) {
         // View an image
         var preview = document.querySelector('img');
@@ -64,8 +128,8 @@
         fetch(url, {
             method: 'post',
                 headers: {
-      'Content-Type': 'application/json'
-    },
+                    'Content-Type': 'application/json'
+                    },
             body: JSON.stringify(payload)
         })
             .then(json)
@@ -77,18 +141,3 @@
             });
     }
 </script>
-<h1>ImageViewer</h1>
-
-<!-- Learn about this code on MDN: https://developer.mozilla.org/en-US/docs/Web/API/FileReader/readAsDataURL -->
-<div>
-    <input type="file" onchange="previewFile()"><br>
-</div>
-<div>
-
-    <img id="preview" src="" height="200" alt="Image preview...">
-</div>
-<div>
-    <button onclick="openViewer('preview')">Open Viewer</button>
-    <button onclick="destroyViewer()">Close Viewer</button>
-    <button onclick="sendImage('preview')">Send Image</button>
-</div>
